--- a/src/pages/Layout/Layout.module.css
+++ b/src/pages/Layout/Layout.module.css
@@ -1,6 +1,8 @@
 .layout {
-  height: 100%;
   font-size: 24px;
   color: #010101;
-  padding-bottom: 40px;
+}
+.main {
+    min-height: 100vh;
+    background-color: #f5f4fa;
 }
