--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -1,3 +1,7 @@
+.products {
+  padding-top: 120px;
+}
+
 .productList {
   font-size: 24px;
   line-height: 32px;
@@ -6,7 +10,6 @@
 .productList li {
   display: inline-block;
   margin: 7px;
-
 }
 .productList li a {
   text-decoration: none;
