--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -28,5 +28,21 @@
               url(./hero.jpg);
           }
         }
-      
+    }
+    .logo_round {
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        background-color: aliceblue;
+        position: absolute;
+        left: 50%;
+        top: 50px;
+        transform: translate(-150px, 25%);
+    }
+    .logo {
+        width: 220px;
+        position: absolute;
+        left: 45px;
+        top: 45px;
+    
     }
