--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -7,6 +7,7 @@
         background-size: cover;
         padding: 118px 0px;
         max-width: 1600px;
+        margin: 0 auto;
       
         @media (min-device-pixel-ratio: 2),
           (-webkit-min-device-pixel-ratio: 2),
