--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -6,7 +6,13 @@
 .nav a {
   font-size: 26px;
   line-height: 48px;
-  color: rgb(255, 255, 255);
+  color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   margin: 20px 0 20px 56px;
+  transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: rgba(255, 255, 255);
+}
 }
