--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -13,15 +13,25 @@
   margin: 0;
 }
 .productList li {
-
   display: inline-block;
+  box-sizing: border-box;
   margin: 15px;
   width: 370px;
+  border: 1px solid #eeeeee;
+  transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.productList li:hover, .productList li:focus {
+  box-shadow: 0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06), 1px 4px 6px rgba(0,0,0,0.16);
+
 }
 .imageConteiner{
   width: 370px;
   height: 300px;
   overflow: hidden;
+}
+.textBlock{
+  flex-grow: 1;
+    padding: 20px 24px;
 }
 .productList li a {
   text-decoration: none;
