--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,49 +1,93 @@
+.hero {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.2),
+      rgba(47, 48, 58, 0.2)
+    ),
+    url(./hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 118px 0px;
+  max-width: 1600px;
+  margin: 0 auto;
 
-    .hero {
-        background-image: linear-gradient(rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)),
-          url(./hero.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        padding: 118px 0px;
-        max-width: 1600px;
-        margin: 0 auto;
-      
-        @media (min-device-pixel-ratio: 2),
-          (-webkit-min-device-pixel-ratio: 2),
-          (min-resolution: 192dpi),
-          (min-resolution: 2dppx) {
-          background-image: linear-gradient(rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)),
-            url(./hero.jpg);
-        }
-      
-        @media screen and (min-width: 768px) {
-          background-image: linear-gradient(rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)),
-            url(./hero.jpg);
-      
-          @media (min-device-pixel-ratio: 2),
-            (-webkit-min-device-pixel-ratio: 2),
-            (min-resolution: 192dpi),
-            (min-resolution: 2dppx) {
-            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-              url(./hero.jpg);
-          }
-        }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.2),
+        rgba(47, 48, 58, 0.2)
+      ),
+      url(./hero.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.2),
+        rgba(47, 48, 58, 0.2)
+      ),
+      url(./hero.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(./hero.jpg);
     }
-    .logo_round {
-        width: 300px;
-        height: 300px;
-        border-radius: 50%;
-        background-color: aliceblue;
-        position: absolute;
-        left: 50%;
-        top: 50px;
-        transform: translate(-150px, 25%);
-    }
-    .logo {
-        width: 220px;
-        position: absolute;
-        left: 45px;
-        top: 45px;
+  }
+}
+.logoRound {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: aliceblue;
+  position: absolute;
+  left: 50%;
+  top: 50px;
+  transform: translate(-150px, 25%);
+
+  @media screen and (min-width: 768px) {
+
     
-    }
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      transform: translate(-75px, 25%);
+      top: 155px;
+     
+  }
+  @media screen and (min-width: 1200px) {
+
+    
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      transform: translate(-150px, 25%);
+      top: 50px;
+     
+  }
+}
+.logo {
+  width: 120px;
+  position: absolute;
+  left: 45px;
+  top: 45px;
+
+  @media screen and (min-width: 768px) {
+    width: 118px;
+    position: absolute;
+    left: 44px;
+    top: 40px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 220px;
+    position: absolute;
+    left: 45px;
+    top: 45px;
+  }
+}
