--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -8,11 +8,12 @@
   line-height: 48px;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
-  margin: 20px 0 20px 56px;
+  margin: 0 0 0 56px;
+  padding: 20px 0;
   transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     color: rgba(255, 255, 255);
-}
+  }
 }
