--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -5,33 +5,45 @@
 .productList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  
+
+  justify-content: center;
+
   font-size: 24px;
   line-height: 32px;
-  padding:0 0 94px 0;
-  margin: 0;
+  padding: 0 0 94px 0;
+  margin: 0 -15px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+  }
 }
 .productList li {
   display: inline-block;
   box-sizing: border-box;
   margin: 15px;
-  width: 370px;
+  width: 350px;
   border: 1px solid #eeeeee;
   transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 768px) {
+    width: 236px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 276px;
+  }
 }
-.productList li:hover, .productList li:focus {
-  box-shadow: 0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06), 1px 4px 6px rgba(0,0,0,0.16);
-
+.productList li:hover,
+.productList li:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.imageConteiner{
-  width: 370px;
-  height: 300px;
+.imageConteiner {
+  width: 100%;
+  height: 200px;
   overflow: hidden;
 }
-.textBlock{
+.textBlock {
   flex-grow: 1;
-    padding: 20px 24px;
+  padding: 20px 24px;
 }
 .productList li a {
   text-decoration: none;
