--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -55,7 +55,7 @@
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
-  transition: color, 250ms;
+  transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
