--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,31 @@
-.header{
-    background-color:  #2f303a;
-    box-shadow: 0 4px 10px hsl(200deg 3% 44% / 60%);
+.header {
+  background-color: #2f303a;
+  box-shadow: 0 4px 10px hsl(200deg 3% 44% / 60%);
+  
+}
+
+.containerHeaderFlex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.phoneNumber {
+  background-color: #C7181B;
+  border-radius: 20px;
+  padding: 0 10px;
+  color: #fff;
+}
+.phoneNumberLink{
+  font-size: 21px;
+  line-height: 1.71;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.9);
+  padding: 0 5px;
+  font-style: normal;
+  transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: #fff;
   }
+}
