--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,10 +9,11 @@
 .containerHeaderFlex {
   display: flex;
   align-items: center;
+
   @media screen and (max-width: 767px) {
     justify-content: space-between;
   }
-  
+
   @media screen and (min-width: 1200px) {
     justify-content: space-between;
   }
@@ -28,22 +29,32 @@
     display: block;
   }
 }
+.textBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+}
 .phoneNumber {
   background-color: #c7181b;
   border-radius: 20px;
   padding: 0 10px;
   color: #fff;
-  margin-bottom: 30px;
-  @media screen and (max-width: 767px) {
+  /* margin-bottom: 30px; */
+  /* @media screen and (max-width: 767px) {
     margin-bottom: 0;
-  }
+  } */
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
   }
 }
 .phoneNumberLink {
   font-size: 21px;
-  line-height: 1.71;
+    line-height: 1.71;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.9);
   padding: 0 5px;
@@ -54,5 +65,13 @@
   &:hover,
   &:focus {
     color: #fff;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  line-height: 1.6;
+}
+  @media screen and (min-width: 1200px) {
+    font-size: 21px;
+    line-height: 1.71;
   }
 }
