--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -8,16 +8,29 @@
 }
 
 .nav a {
-  font-size: 26px;
-  line-height: 48px;
+  font-size: 18px;
+  line-height: 1.8;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   margin: 0 40px 0 0;
-  padding: 20px 0;
   transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     color: rgba(255, 255, 255);
+
   }
+  &:last-child {
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+   
+  font-size: 26px;
+  line-height: 48px;
+  padding: 20px 0;
+  &:last-child {
+    margin: 0 40px 0 0;
+  }
+}
 }
