--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,7 +32,7 @@
 .textBlock {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 
   @media screen and (min-width: 1200px) {
     flex-direction: row-reverse;
