--- a/src/components/Icons/Icons.module.css
+++ b/src/components/Icons/Icons.module.css
@@ -9,3 +9,14 @@
     display: none;
   }
 }
+.logoMinHeader {
+    width: 73px;
+    display: none;
+    @media screen and (min-width: 768px) {
+     display: initial;
+      }
+}
+.logoMinFooter {
+    width: 147px;
+}
+
