--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,8 +8,12 @@
 
 .containerHeaderFlex {
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 .iconContainer {
   display: flex;
