--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -1,18 +1,36 @@
 .nav {
-  display: none;
+  /* display: none; */
+  width: 375px;
+  box-sizing: border-box;
+    height: 450px;
+    z-index: 1;
+    position: absolute;
+    background-color: #2f303a;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
 
   @media screen and (min-width: 768px) {
-    display: flex;
     justify-content: center;
+
+    width: auto;
+    height: auto;
+    z-index: initial;
+    position: initial;
+    background-color: initial;
+    flex-direction: row;
+    padding: 0;
   }
 }
 
 .nav a {
-  font-size: 18px;
+  font-size: 28px;
   line-height: 1.8;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
-  margin: 0 40px 0 0;
+  margin: 0 40px 20px 0;
   transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
@@ -23,6 +41,11 @@
   &:last-child {
     margin: 0;
   }
+
+  @media screen and (min-width: 768px) {
+    margin: 0 40px 0 0;
+    font-size: 18px;
+    }
 
   @media screen and (min-width: 1200px) {
    
