--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,6 +26,7 @@
     display: block;
   }
 }
+
 .textBlock {
   display: flex;
   flex-direction: column;
@@ -68,4 +69,21 @@
     font-size: 21px;
     line-height: 1.71;
   }
+}
+.boorgerButton {
+  background-color: inherit;
+  line-height: 0;
+  box-shadow: none;
+  position: relative;
+  z-index: 2;
+
+  
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.boorgerButton:hover,
+.boorgerButton:focus {
+  background-color: inherit;
 }
