--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -1,6 +1,6 @@
 .nav {
   /* display: none; */
-  width: 375px;
+  width: 100%;
   box-sizing: border-box;
     height: 450px;
     z-index: 1;
@@ -11,10 +11,12 @@
     display: flex;
     flex-direction: column;
     padding: 30px;
+    transform: translateX(-100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     justify-content: center;
-
+    transform: translateX(0);
     width: auto;
     height: auto;
     z-index: initial;
@@ -24,6 +26,9 @@
     padding: 0;
   }
 }
+.navShow {
+  transform: translateX(0);
+}
 
 .nav a {
   font-size: 28px;
@@ -31,7 +36,7 @@
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   margin: 0 40px 20px 0;
-  transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
