--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -76,8 +76,13 @@
   box-shadow: none;
   position: relative;
   z-index: 2;
+  width: 80px;
+  height: 116px;
+  &:focus,
+  &:active {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
 
-  
   @media screen and (min-width: 768px) {
     display: none;
   }
