--- a/src/components/NavItems/NavItems.module.css
+++ b/src/components/NavItems/NavItems.module.css
@@ -2,17 +2,17 @@
   /* display: none; */
   width: 100%;
   box-sizing: border-box;
-    height: 450px;
-    z-index: 1;
-    position: absolute;
-    background-color: #2f303a;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    transform: translateX(-100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 450px;
+  z-index: 1;
+  position: absolute;
+  background-color: #2f303a;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  transform: translateX(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     justify-content: center;
@@ -41,7 +41,9 @@
   &:hover,
   &:focus {
     color: rgba(255, 255, 255);
-
+  }
+  &:active {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
   &:last-child {
     margin: 0;
@@ -50,15 +52,14 @@
   @media screen and (min-width: 768px) {
     margin: 0 40px 0 0;
     font-size: 18px;
-    }
+  }
 
   @media screen and (min-width: 1200px) {
-   
-  font-size: 26px;
-  line-height: 48px;
-  padding: 20px 0;
-  &:last-child {
-    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 48px;
+    padding: 20px 0;
+    &:last-child {
+      margin: 0 40px 0 0;
+    }
   }
-}
 }
