--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -6,9 +6,11 @@
   align-items: center;
   justify-content: center;
   padding-top: 15vh;
+  padding-bottom: 15vh;
 }
 .emptyCart {
-  display: flex;
+  /* display: flex; */
+  display: none;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -26,4 +28,164 @@
 .emptyCartLink {
   display: inline-block;
   text-decoration: none;
+}
+
+.productCard {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 350px;
+  box-sizing: border-box;
+  background-color: #f5f4fa;
+  border: 1px solid #ececec;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+  @media screen and (min-width: 768px) {
+    max-width: 1096px;
+  }
+}
+.productCard h2 {
+  margin-bottom: 30px;
+  font-size: 25px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 30px;
+  }
+}
+.productBlock {
+  padding: 15px;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  margin-bottom: 30px;
+
+  font-size: 18px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+.modalImg {
+  width: 200px;
+  height: 150px;
+  background-color: #686a75;
+  margin-bottom: 25px;
+  overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+    margin-bottom: 0;
+    width: 117px;
+    height: 86px;
+  }
+}
+
+.productName {
+  margin-bottom: 15px;
+  width: 273px;
+  height: 86px;
+
+  @media screen and (min-width: 768px) {
+    width: 273px;
+    /* margin-right: 50px; */
+    margin-bottom: 0;
+  }
+}
+.productName h3 {
+  font-size: 18px;
+  color: #212121;
+  margin-bottom: 7px;
+  text-transform: uppercase;
+}
+
+.productName p {
+  color: #757575;
+  font-size: 14px;
+  margin-bottom: 7px;
+
+  &:last-child {
+    margin: 0;
+  }
+}
+
+.productButtonsBlock {
+  width: 296px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  @media screen and (min-width: 768px) {
+    width: 360px;
+    /* margin-right: 50px; */
+  }
+}
+.counterButtonsBlock {
+  display: flex;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    /* margin-right: 50px; */
+  }
+}
+.counterButton,
+.closeButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 27px;
+  height: 27px;
+  padding: 0;
+}
+.priceBlock {
+  font-weight: 500;
+}
+.counterText {
+  width: 50px;
+  padding: 5px;
+  margin: 10px;
+  border-radius: 5px;
+  border-color: #eeeeee;
+  border-style: solid;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:focus-visible {
+    outline: #eeeeee auto 1px;
+  }
+}
+.closeButton {
+  rotate: 45deg;
+}
+.priceBlock {
+  @media screen and (min-width: 768px) {
+    /* margin-right: 50px; */
+  }
+}
+
+.buttonsBlock {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+.btnLinck {
+  text-decoration: none;
+}
+.navigateButton {
+  width: 180px;
+  height: 50px;
+}
+
+.navigateButtonLeft {
+  background-color: initial;
+  color: #686a75;
+  margin-bottom: 15px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 50px;
+    margin-bottom: 0;
+  }
 }
