--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -144,7 +144,9 @@
 .priceBlock {
   font-weight: 500;
 }
-.counterText {
+.counterText,
+.cartInput,
+.cartComent {
   width: 50px;
   padding: 5px;
   margin: 10px;
@@ -166,6 +168,54 @@
   }
 }
 
+.cartForm {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.cartLabel {
+  display: flex;
+  flex-direction: column;
+  /* width: 50%; */
+  box-sizing: content-box;
+  font-size: 18px;
+  color: #686a75;
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+  }
+}
+.cartLabel span {
+  margin-left: 10px;
+}
+.cartLabelComent {
+  display: flex;
+  flex-direction: column;
+  width: inherit;
+}
+.userContact {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: initial;
+  }
+}
+.cartInput {
+  width: auto;
+  height: 28px;
+}
+.cartComent {
+  width: initial;
+  height: 120px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+}
 .buttonsBlock {
   @media screen and (min-width: 768px) {
     display: flex;
@@ -175,8 +225,12 @@
   text-decoration: none;
 }
 .navigateButton {
-  width: 180px;
+  width: 268px;
   height: 50px;
+
+  @media screen and (min-width: 768px) {
+    width: 180px;
+  }
 }
 
 .navigateButtonLeft {
