--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -39,6 +39,10 @@
   width: 100%;
   height: 200px;
   overflow: hidden;
+  background-image: linear-gradient(rgba(47,48,58,0.1), rgba(47,48,58,0.1)),url(./bgImg_2.jpg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .textBlock {
   flex-grow: 1;
