--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -43,15 +43,18 @@
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 
-  @media screen and (min-width: 768px) {
-    max-width: 1096px;
+  @media screen and (min-width: 818px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 950px) {
+     max-width: 1096px;
   }
 }
 .productCard h2 {
   margin-bottom: 30px;
   font-size: 25px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     font-size: 30px;
   }
 }
@@ -63,7 +66,7 @@
 
   font-size: 18px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -76,7 +79,7 @@
   margin-bottom: 25px;
   overflow: hidden;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     margin-right: 30px;
     margin-bottom: 0;
     width: 117px;
@@ -89,8 +92,8 @@
   width: 273px;
   height: 86px;
 
-  @media screen and (min-width: 768px) {
-    width: 273px;
+  @media screen and (min-width: 818px) {
+    width: 200px;
     /* margin-right: 50px; */
     margin-bottom: 0;
   }
@@ -118,7 +121,7 @@
   align-items: center;
   justify-content: space-around;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     width: 360px;
     /* margin-right: 50px; */
   }
@@ -127,7 +130,7 @@
   display: flex;
   align-items: center;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     /* margin-right: 50px; */
   }
 }
@@ -163,7 +166,7 @@
   rotate: 45deg;
 }
 .priceBlock {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     /* margin-right: 50px; */
   }
 }
@@ -184,7 +187,7 @@
   color: #686a75;
   margin-bottom: 10px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     width: 50%;
   }
 }
@@ -202,7 +205,7 @@
   flex-direction: column;
   justify-content: space-around;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     flex-direction: initial;
   }
 }
@@ -217,7 +220,7 @@
   margin-bottom: 20px;
 }
 .buttonsBlock {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     display: flex;
   }
 }
@@ -228,7 +231,7 @@
   width: 268px;
   height: 50px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     width: 180px;
   }
 }
@@ -238,7 +241,7 @@
   color: #686a75;
   margin-bottom: 15px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 818px) {
     margin-right: 50px;
     margin-bottom: 0;
   }
